--- a/app-web-ui/pom.xml
+++ b/app-web-ui/pom.xml
@@ -52,6 +52,14 @@
 			<version>4.13.2</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>5.0</version>
+	<scope>test</scope>
+</dependency>
 
 
 		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
