--- a/app-desktop-ui/pom.xml
+++ b/app-desktop-ui/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.test</groupId>
-	<artifactId>app-web-ui</artifactId>
+	<artifactId>app-desktop-ui</artifactId>
 	<name>app-desktop-ui</name>
 	<version>1.0</version>
 	<url>http://maven.apache.org</url>
