--- a/app-web-ui/pom.xml
+++ b/app-web-ui/pom.xml
@@ -5,64 +5,40 @@
 	<artifactId>app-web-ui</artifactId>
 	<name>app-web-ui</name>
 	<version>1.0</version>
-	<url>http://maven.apache.org</url>
-
-	<properties>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
-
-	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.0</version>
-					<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
-					</configuration>
-				</plugin>
-				<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-					<groupId>org.apache.maven.plugins</groupId>
-					<version>2.12.4</version>
-					<configuration>
-					<suiteXmlFiles>
-					<suiteXmlFile>testng.xml</suiteXmlFile>
-					</suiteXmlFiles>
-					</configuration>
-				</plugin>
-
-				<plugin>
-					<artifactId>maven-failsafe-plugin</artifactId>
-					<executions>
-						<execution>
-							<goals>
-								<goal>integration-test</goal>
-								<goal>verify</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
 	<dependencies>
-
-		<dependency>
-			<groupId>org.apache.maven.surefire</groupId>
-			<artifactId>surefire-testng</artifactId>
-			<version>2.14.1</version>
-		</dependency>
-		<dependency>
+	<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.8.1</version>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
-
+	<build>
+	<pluginManagement>
+	<plugins>
+	
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-compiler-plugin</artifactId>
+		<version>3.5.1</version>
+			<configuration>
+				<source>1.8</source>
+				<target>1.8</target>
+			</configuration>
+	</plugin>
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-surefire-plugin</artifactId>
+		<version>2.19.1</version>
+			<configuration>
+			<excludedGroups>${group.name}</excludedGroups>
+				<suiteXmlFiles>
+				<!-- TestNG suite XML files -->
+					<suiteXmlFile>testng.xml</suiteXmlFile>
+				</suiteXmlFiles>
+			</configuration>
+	</plugin>
+	</plugins>
+	</pluginManagement>
+	</build>
 </project>
